# llm-from-scratch

./: README.md  env.sample  pyproject.toml  requirements.txt
docs/: 01-tokenization.md  02-the-transformer.md  03-training-loop.md  04-text-generation.md  05-putting-it-together.md  06-competition.md  slides.html  slides.md
visualizations/: tokenization_live.html  training_loop_losscurves.html  training_loop_stepcycle.html  transformer_flow.html
